# ptags

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml
.cargo/: config
.github/workflows/: coverage.yml  periodic.yml  regression.yml  release.yml
benches/: ptags_bench.rs
src/: bin.rs  cmd_ctags.rs  cmd_git.rs  lib.rs  main.rs
test/: lfs.txt
