[package]
name = "ptags"
version = "0.3.2"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/ptags"
keywords = ["ctags", "universal-ctags"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
description = "A parallel universal-ctags wrapper for git repository"
edition = "2018"

[badges]
travis-ci = { repository = "dalance/ptags" }
appveyor  = { repository = "dalance/ptags", branch = "master", service = "github" }
codecov   = { repository = "dalance/ptags", branch = "master", service = "github" }

[dependencies]
dirs           = "1.0.4"
failure        = "0.1.5"
nix            = "0.10.0"
serde          = "1.0.33"
serde_derive   = "1.0.33"
structopt      = "0.2.5"
structopt-toml = "0.4.0"
tempfile       = "2.2.0"
time           = "0.1.39"
toml           = "0.4.5"

[dev-dependencies]
bencher = "0.1.5"

[lib]
name = "ptagslib"
path = "src/lib.rs"

[[bin]]
name = "ptags"
path = "src/main.rs"

[[bench]]
name    = "ptags_bench"
harness = false

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
