[package]
name = "ptags"
version = "0.3.4"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/ptags"
keywords = ["ctags", "universal-ctags"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
description = "A parallel universal-ctags wrapper for git repository"
edition = "2018"

[badges]
travis-ci = { repository = "dalance/ptags" }
appveyor  = { repository = "dalance/ptags", branch = "master", service = "github" }
codecov   = { repository = "dalance/ptags", branch = "master", service = "github" }

[dependencies]
dirs           = "4"
failure        = "0.1"
nix            = "0.26"
serde          = "1"
serde_derive   = "1"
structopt      = "0.3"
structopt-toml = "0.4"
tempfile       = "3"
time           = "0.3"
toml           = "0.5"

[dev-dependencies]
bencher = "0.1"

[lib]
name = "ptagslib"
path = "src/lib.rs"

[[bin]]
name = "ptags"
path = "src/main.rs"

[[bench]]
name    = "ptags_bench"
harness = false

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
