[package]
name = "ptags"
version = "0.3.5"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/ptags"
keywords = ["ctags", "universal-ctags"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
description = "A parallel universal-ctags wrapper for git repository"
edition = "2018"

[badges]
travis-ci = { repository = "dalance/ptags" }
appveyor  = { repository = "dalance/ptags", branch = "master", service = "github" }
codecov   = { repository = "dalance/ptags", branch = "master", service = "github" }

[dependencies]
anyhow         = "1.0"
dirs           = "6"
nix            = { version = "0.29.0", features = ["fs"] }
serde          = "1"
serde_derive   = "1"
structopt      = "0.3"
structopt-toml = "0.5"
tempfile       = "3"
thiserror      = "2.0"
time           = "0.3"
toml           = "0.9"

[dev-dependencies]
bencher = "0.1"

[lib]
name = "ptagslib"
path = "src/lib.rs"

[[bin]]
name = "ptags"
path = "src/main.rs"

[[bench]]
name    = "ptags_bench"
harness = false

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
